Add ChatMember entity and realtime notification
