# server/src/chats/entities/chat.entity.ts
@@ -1,27 +1,19 @@
-import {
-  Collection,
-  Entity,
-  ManyToMany,
-  OneToMany,
-  OneToOne,
-  PrimaryKey,
-  Property,
-} from '@mikro-orm/core';
+import { Collection, Entity, OneToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
 import { v4 } from 'uuid';
 import { ChatResponse } from '../dto/chat.response';
-import { User } from '../../users/entities/user.entity';
 import { UserResponse } from '../../friends/dto/user.response';
 import { ChatType } from './chat-type.enum';
 import { Group } from '../../groups/entities/group.entity';
 import { Message } from '../../messages/entities/message.entity';
+import { ChatMember } from './member.entity';
 
 @Entity()
 export class Chat {
   @PrimaryKey()
   id: string;
 
-  @ManyToMany(() => User)
-  members: Collection<User> = new Collection<User>(this);
+  @OneToMany(() => ChatMember, (m) => m.chat)
+  members = new Collection<ChatMember>(this);
 
   @Property()
   type: ChatType;
@@ -42,13 +34,14 @@ export class Chat {
     this.type = type;
   }
 
-  toChatResponse(user?: UserResponse | null): ChatResponse {
+  toChatResponse(current: ChatMember, user?: UserResponse | null): ChatResponse {
     return {
       id: this.id,
       type: this.type,
       user,
       group: this.group?.toGroupResponse(this.members.count()) || null,
       lastMessage: this.messages.getItems().at(-1)?.toResponse() || null,
+      hasNotification: this.messages.getItems().some((m) => m.sentAt > current.lastSeen),
     };
   }
 }
